<resources>
    <string name="app_name">Shopify</string>
    <string name="title_home">Home</string>
    <string name="title_todolist">Todo List</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="clear_field">Clear Field</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome, Nama Lengkap</string>
    <string name="welcome2">Happy Shopping!</string>
    <string name="alamat">Alamat</string>
    <string name="loading_text">loading…be patience</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFnbmV0aWM0MzIxIiwiYSI6ImNrdWt5OHdkNjBkbmUydW80MG1sbmhkaWwifQ.66WeJH9stKlAP9Ndt7kPbw</string>
    <string name="user_location_permission_explanation">Give permission?</string>
    <string name="user_location_permission_not_granted">Permission not granted</string>
    <string name="item_list">Item List</string>
    <string name="announce">Announce</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="format_money">%.0f</string>
    <string name="nama">Nama</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="deksripsi">Deksripsi</string>
    <string name="buka_kamera">Buka kamera</string>
    <string name="pilih_dari_galeri">Pilih dari galeri</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_profile">Your Profile</string>
</resources>