<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="com.example.shopify.model.User"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.">

        <TextView
            android:id="@+id/txtYour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="120dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/label_name"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            app:layout_constraintTop_toBottomOf="@+id/txtYour"
            android:textSize="18sp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:hint="Name"
            app:layout_constraintTop_toBottomOf="@+id/label_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/label_username"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:textSize="18sp"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{user.email}"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/label_username"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/edit_profile"
            android:textSize="16sp"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/user_username"/>
        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="MAP"
            android:textSize="16sp"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginBottom="120dp"
            android:text="LOGOUT"
            android:textSize="14sp"
            android:backgroundTint="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>